# HexRift

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yaml  release.yaml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yaml
.github/workflows/: check-commit-message-pr.yaml  check-schema-not-modified.yaml  ci-code-quality.yaml  create-tag.yaml  labels.yaml  update-schema.yaml
hexrift/: __main__.py  app.py  constants.py  errors.py
hexrift/components/derive/: component.py  controller.py  defaults.py  identity.py  topology.py
hexrift/components/keys/: component.py  controller.py  decryption.py  reality.py  store.py
hexrift/components/render/: component.py  context.py  controller.py  haproxy.py  xray.py
hexrift/components/schema/: component.py  controller.py
hexrift/components/schema/models/: __init__.py  defaults.py  global_.py  groups.py  regions.py  root.py  routing.py  shared.py  users.py
hexrift/core/: __init__.py  application.py  component.py  controller.py  model.py  types.py
hexrift/templates/haproxy/: haproxy.cfg.j2
